[package]
name = "fluid-example"
version = "0.1.0"
authors = ["nrayamajhee <nishan@rayamajhee.com>"]
edition = "2021"

[dependencies.web-sys]
version = "0.3.64"
features = [
	"DedicatedWorkerGlobalScope",
	"ErrorEvent",
	"Event",
	"Navigator",
  "Worker",
  "MessageEvent",
	"Window",
	"Document",
	"Element",
	"HtmlElement",
]

[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
fluid = { path = "../fluid" }
fluid-macro = { path = "../fluid-macro" }
gloo-console = "0.3.0"
gloo-utils = "0.2.0"
