[package]
name = "fluid"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-timers = "0.3.0"
gloo-utils = "0.2.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "Window",
  "Document",
  "Element",
  "Text",
  "HtmlElement",
  "Event",
  "Performance",
]
